# Git-Sync

./: .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  build.spec  docker-compose.yaml  eslint.config.js  main.py  package.json  pyproject.toml  tsconfig.json  vitest.config.ts
.github/workflows/: release.yml
config/: daemon-test.yaml  git-sync.yaml.example  test-sync.yaml
docs/: DESIGN.md  UBUNTU_INSTALL.md  USER_GUIDE.md
release/: README.md
src/: cli.test.ts  cli.ts  run-tui.ts  tui-entry.tsx
src/core/: author-rewrite.test.ts  author-rewrite.ts  git-operations.test.ts  git-operations.ts  in-memory-state-manager.ts  mock-database.ts  mock-simple-git.ts  scheduler.test.ts  scheduler.ts  state-manager.test.ts  state-manager.ts  sync-engine.test.ts  sync-engine.ts
src/git_sync/: cli.py
src/git_sync/core/: __init__.py  author_rewrite.py  git_ops.py  scheduler.py  state_manager.py  sync_engine.py
src/git_sync/models/: __init__.py  config.py  state.py  sync.py
src/git_sync/tui/: __init__.py  app.py
src/git_sync/utils/: __init__.py  logger.py  mailmap.py  retry.py
src/tui/: app.tsx  index.test.tsx  index.tsx
src/types/: config.test.ts  config.ts  index.ts  repo.test.ts  repo.ts  state.test.ts  state.ts  sync.test.ts  sync.ts
src/utils/: auth-url-builder.test.ts  auth-url-builder.ts  config-merger.test.ts  config-merger.ts  index.ts  logger.test.ts  logger.ts  mailmap-generator.test.ts  mailmap-generator.ts  retry.test.ts  retry.ts
tests/: integration_test.sh  test_git_sync.py
